create data and domain

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding_layout"
-    tools:context=".MainActivity">
+    tools:context=".presentation.MainActivity">
 
     <EditText
         android:layout_width="@dimen/full_width_component"
