--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -16,6 +16,7 @@
         tools:ignore="ContentDescription" />
 
     <TextView
+        android:id="@+id/tvUsername"
         android:layout_width="@dimen/full_width_component"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_component"
