--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding_layout"
+    android:paddingTop="@dimen/padding_layout"
+    android:paddingStart="@dimen/padding_layout"
+    android:paddingEnd="@dimen/padding_layout"
     tools:context=".presentation.home.MainActivity">
 
     <EditText
